Finnished image_browser.cpp functions

--- a/homeworks/hw3/CMakeLists.txt
+++ b/homeworks/hw3/CMakeLists.txt
@@ -6,7 +6,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 include_directories(include/)
 include_directories(fmt/include)
 
+add_library(image_browser api/image_browser.cpp)
 add_library(image_writer api/html_writer.cpp)
 add_executable(main api/main.cpp)
-target_link_libraries(main image_writer)
+#target_link_libraries(image_writer image_browser)
+target_link_libraries(main image_browser image_writer)
+
 
